--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="login_error">Login failed, please try again!</string>
     <string name="signup_error">Signup failed, please try again!</string>
     <string name="maps">Maps</string>
-    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_maps">Location</string>
+    <string name="retry">Retry</string>
 </resources>
